--- a/tejido_home.html
+++ b/tejido_home.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -40,7 +40,7 @@
                          como un "colchón" natural. A nivel hormonal, el tejido adiposo es un actor clave, secretando 
                          hormonas como la leptina, la adiponectina y citoquinas que regulan el apetito, el metabolismo y la inflamación.
                     </p>
-                    <img src="/images/tejido_adiposo_grasa.webp" alt="Tejido Adiposo, ejemplo de lo que es y la importacía de cuidarse y el papel que juega en nuestro organismo" class="image-tab">
+                    <img src="tejido_adiposo_grasa.webp" alt="Tejido Adiposo, ejemplo de lo que es y la importacía de cuidarse y el papel que juega en nuestro organismo" class="image-tab">
                 </div>
 
                 <div id="tipos" class="content-panel">
@@ -59,7 +59,7 @@
                             lípidos y una alta densidad de mitocondrias, que le dan su color característico.
                         </li>
                     </ul>
-                    <img src="/images/tejido_adiposo_tipo.webp" alt="Tejido Adiposo, ejemplo de lo que es y la importacía de cuidarse y el papel que juega en nuestro organismo" class="image-tab-tipos">
+                    <img src="tejido_adiposo_tipo.webp" alt="Tejido Adiposo, ejemplo de lo que es y la importacía de cuidarse y el papel que juega en nuestro organismo" class="image-tab-tipos">
                 </div>
 
                 <div id="funciones" class="content-panel">
@@ -114,7 +114,7 @@
                             y respondiendo a señales de inflamación y estrés.
                         </li>
                     </ul>
-                    <img src="/images/tejido_adiposo_comparacion.webp" alt="Tejido Adiposo, ejemplo de lo que es y la importacía de cuidarse y el papel que juega en nuestro organismo" class="image-tab-funciones">
+                    <img src="tejido_adiposo_comparacion.webp" alt="Tejido Adiposo, ejemplo de lo que es y la importacía de cuidarse y el papel que juega en nuestro organismo" class="image-tab-funciones">
                 </div>
 
                 <div id="estructura" class="content-panel">
@@ -142,6 +142,6 @@
             Yaretzi Martinez Ramirez
         </p>
     </footer>
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
